--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -202,7 +202,7 @@
 </br></p>
 <p> <strong>After the upgrade is completed you can:</strong></p>
 <ol>
-<li><p><strong>Rebuild</strong> the upgraded environment from the  <strong>Actions</strong> button - a pop-up informs that <em>Any changes made to the environment will be lost and the environment will be reset to its original state.</em>. To proceed, tick the checkbok and click <strong>Confirm</strong></p>
+<li><p><strong>Rebuild</strong> the upgraded environment from the  <strong>Actions</strong> button - a pop-up informs that <em>Any changes made to the environment will be lost and the environment will be reset to its original state.</em> To proceed, tick the check box and click <strong>Confirm</strong>:</p>
 <p><img src="images/upgrade-rebuild-env.png" alt=""> </p>
 </li>
 <li><p><strong>Clone</strong> the upgraded environment from the <strong>Actions</strong> button -  a pop-up appears where you need to insert the <strong>Environment Name</strong>, <strong>Environment Description</strong> and <strong>Labels</strong>. The pop-up informs that if L3 packages are manually altered, then they will not be copied and the clone may not work if the T24 environment is upgraded:</p>
