--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -81,10 +81,25 @@
             <article class="content wrap" id="_content" data-uid="">
 <h2 id="release-notes">Release Notes</h2>
 
-<p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
+<p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release. </p>
+<h1 id="202011"><strong>202011</strong></h1>
+<p><strong>InfraBuild</strong>: 39  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202011.RC3
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 335  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202011 &nbsp; </p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Factory:  Product Configuration and Promotion Configuration changes</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Product and Promotion Configuration screens were enhanced for a better user experience. Read more <a href="http://documentation.temenos.cloud/home/techguides/automated-factories.html">here</a>
+<br><br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Factory Run: Added validation that checks for the correct file naming format</strong> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - File naming conventions are validated immediately after the factory run is triggered. If the naming convention is not compliant, the factory run fails. 
+<br>
+</br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. Environment Events tab improvements</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Error messages  in the environment <strong>Events</strong> tab are enhanced to provide meaningful information.</p>
+<p><br>
+</br> </p>
 <h1 id="202010"><strong>202010</strong></h1>
 <p><strong>InfraBuild</strong>: 39  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202010.RC8
-&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 320  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202010 |&nbsp; </p>
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 320  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202010 &nbsp; </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Service Virtualization/ GIT folder standardization</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This feature provides a self-service template editing mechanism that creates custom template from a model bank template. All the component binaries used in the environment can be changed once the environment is created. Read more <a href="http://documentation.temenos.cloud/home/techguides/git-folder-standardisation.html?q=git%20fol">here</a>.
