--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -87,7 +87,7 @@
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 335  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202011 &nbsp; </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Factory:  Product Configuration and Promotion Configuration changes</strong></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Product and Promotion Configuration screens were enhanced for a better user experience. Read more <a href="http://documentation.temenos.cloud/home/techguides/automated-factories.html">here</a>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Product and Promotion Configuration screens were enhanced for a better user experience. Read more <a href="http://documentation.temenos.cloud/home/techguides/automated-factories.html">here</a>.
 <br><br> </p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Factory Run: Added validation that checks for the correct file naming format</strong> </p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - File naming conventions are validated immediately after the factory run is triggered. If the naming convention is not compliant, the factory run fails. 
