--- a/home/techguides/templates-list.html
+++ b/home/techguides/templates-list.html
@@ -94,64 +94,79 @@
 </thead>
 <tbody>
 <tr>
+<td>MB-Transact-Jboss-SQL-202012</td>
+<td>202012</td>
+<td>TSS-R20 Template for Stack06 - 202012 using ARM template</td>
+</tr>
+<tr>
+<td>MB-Transact-Jboss-SQL-202011</td>
+<td>202011</td>
+<td>TSS-R20 Template for Stack06 - 202011 using ARM template</td>
+</tr>
+<tr>
+<td>MB-Transact-Jboss-SQL-202010</td>
+<td>202010</td>
+<td>TSS-R20 Template for Stack06 - 202010 using ARM template</td>
+</tr>
+<tr>
 <td>MB-T24-Jboss-SQL-202008</td>
 <td>202008</td>
-<td>TSS-R20 Template for Stack06 - 202008 using ARM   template</td>
+<td>TSS-R20 Template for Stack06 - 202008 using ARM template</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-202004-ARM</td>
 <td>202004</td>
-<td>TSS-R20Template for Stack06 - 202004 using ARM   template</td>
+<td>TSS-R20Template   for Stack06 - 202004 using ARM template</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-202003</td>
 <td>202003</td>
-<td>TSS-R20Template for Stack06 - 202003</td>
+<td>TSS-R20Template   for Stack06 - 202003</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-202002</td>
 <td>202002</td>
-<td>TSS-R20Template for Stack06 - 202002</td>
+<td>TSS-R20Template   for Stack06 - 202002</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-202001</td>
 <td>202001</td>
-<td>TSS-R20Template for Stack06 - 202001</td>
+<td>TSS-R20Template   for Stack06 - 202001</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201912</td>
 <td>201912</td>
-<td>TSS-R19Template for Stack06 - 201912</td>
+<td>TSS-R19Template   for Stack06 - 201912</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201911</td>
 <td>201911</td>
-<td>TSS-R19Template for Stack06 - 201911</td>
+<td>TSS-R19Template   for Stack06 - 201911</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201910</td>
 <td>201910</td>
-<td>TSS-R19Template for Stack06 - 201910</td>
+<td>TSS-R19Template   for Stack06 - 201910</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201909</td>
 <td>201909</td>
-<td>TSS-R19Template for Stack06 - 201909</td>
+<td>TSS-R19Template   for Stack06 - 201909</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201908</td>
 <td>201908</td>
-<td>TSS-R19Template for Stack06 - 201908</td>
+<td>TSS-R19Template   for Stack06 - 201908</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201904</td>
 <td>201904</td>
-<td>TSS-R19Template for Stack06 - 201904</td>
+<td>TSS-R19Template   for Stack06 - 201904</td>
 </tr>
 <tr>
 <td>MB-T24-Jboss-SQL-201804</td>
 <td>201804</td>
-<td>TSS-R18Template for Stack06 - 201804</td>
+<td>TSS-R18Template   for Stack06 - 201804</td>
 </tr>
 </tbody>
 </table>
@@ -166,39 +181,59 @@
 </thead>
 <tbody>
 <tr>
+<td>MB-Transact-Wildfly-H2-202011</td>
+<td>202011</td>
+<td>T24 R20.11   (Open Source)</td>
+</tr>
+<tr>
+<td>MB-Transact-Wildfly-H2-202010</td>
+<td>202010</td>
+<td>T24 R20.10   (Open Source)</td>
+</tr>
+<tr>
+<td>MB-T24-Wildfly-H2-202009</td>
+<td>202009</td>
+<td>T24 R20.09   (Open Source)</td>
+</tr>
+<tr>
+<td>MB-T24-Wildfly-H2-202008</td>
+<td>202008</td>
+<td>T24 R20.08   (Open Source)</td>
+</tr>
+<tr>
 <td>MB-T24-Wildfly-H2-202004</td>
 <td>202004</td>
-<td>T24 R20.04 (Open Source)</td>
+<td>T24   R20.04 (Open Source)</td>
 </tr>
 <tr>
 <td>MB-T24-Wildfly-H2-202003</td>
 <td>202003</td>
-<td>T24 R20.03 (Open Source)</td>
+<td>T24   R20.03 (Open Source)</td>
 </tr>
 <tr>
 <td>MB-T24-Wildfly-H2-202002</td>
 <td>202002</td>
-<td>T24 R20.02 (Open Source)</td>
+<td>T24   R20.02 (Open Source)</td>
 </tr>
 <tr>
 <td>MB-T24-Wildfly-H2-202001</td>
 <td>202001</td>
-<td>T24 R20.01 (Open Source)</td>
+<td>T24   R20.01 (Open Source)</td>
 </tr>
 <tr>
 <td>MB-T24-Wildfly-H2-201912</td>
 <td>201912</td>
-<td>T24 R19.12 (Open Source)</td>
+<td>T24   R19.12 (Open Source)</td>
 </tr>
 <tr>
 <td>MB-T24-Wildfly-H2-201911</td>
 <td>201911</td>
-<td>T24 R19.11 (Open Source)</td>
+<td>T24   R19.11 (Open Source)</td>
 </tr>
 <tr>
 <td>MB-T24-Wildfly-H2-201910</td>
 <td>201910</td>
-<td>T24 R19.10 (Open Source)</td>
+<td>T24   R19.10 (Open Source)</td>
 </tr>
 <tr>
 <td>MB-T24-Wildfly-H2-201909</td>
@@ -208,22 +243,22 @@
 <tr>
 <td>MB-T24-Wildfly-H2-201908</td>
 <td>201908</td>
-<td>T24 R19.08 (Open Source)</td>
+<td>T24   R19.08 (Open Source)</td>
 </tr>
 <tr>
 <td>MB-T24-Wildfly-H2-201906</td>
 <td>201906</td>
-<td>T24 R19.06 (Open Source)</td>
+<td>T24   R19.06 (Open Source)</td>
 </tr>
 <tr>
 <td>MB-T24-Wildfly-H2-201904</td>
 <td>201904</td>
-<td>This is template for T24 with Widfly and H2</td>
+<td>This   is template for T24 with Widfly and H2</td>
 </tr>
 <tr>
 <td>MB-T24-Wildfly-H2-201812</td>
 <td>201812</td>
-<td>T24 R18.12 (Open Source)</td>
+<td>T24   R18.12 (Open Source)</td>
 </tr>
 </tbody>
 </table>
