--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -149,7 +149,7 @@
 </li>
 <li><p><strong>Clone environment</strong> - create an identical environment by copying the Environment and configuration repository</p>
 </li>
-<li><p><strong>Upgrade</strong> - the feature is only available for the <strong>Model Bank TSS/ OSS Stack Template</strong>, therefore Extend environments. By clicking on <strong>Upgrade</strong> you can boost the environment to the target template version. </p>
+<li><p><strong>Upgrade</strong> - the feature is only available for the <strong>Model Bank TSS/ OSS Stack Template</strong>, therefore Extend environments. By clicking on <strong>Upgrade</strong> you can boost the environment to the target template version. Watch the tutorial <a href="https://youtu.be/R4J4P-SlJ6Q">here</a>.</p>
 <ul>
 <li><p>Upon clicking on the button a pop-up appears which prompts to select another template from the list of available template:
 <img src="images/environment-upgrade-button.png" alt=""> </p>
