--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -212,7 +212,7 @@
 <p><br>
 </br></p>
 <h1 id="trigger-deployment">Trigger Deployment</h1>
-<p>•   After all the required features are committed and pushed to the Environment Repository, you have to deploy these features in your Environment. To do this, login to your organisation, select your environment, locate <strong>Repository</strong> Application and click the <strong>Deploy</strong> button.</p>
+<p>After all the required features are committed and pushed to the Environment Repository, you have to deploy these features in your Environment. To do this, login to your organisation, select your environment, locate <strong>Repository</strong> Application and click the <strong>Deploy</strong> button:</p>
 <p><img src="images/use-git-deploy.png" alt="repo deploy 1"></p>
 <p>• A notification appears which displays the list of components that will be deployed. Tick the confirmation box to proceed:</p>
 <p><img src="images/deploy-components.png" alt="deploy components"></p>
