--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -82,6 +82,17 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release. </p>
+<h1 id="202012"><strong>202012</strong></h1>
+<p><strong>InfraBuild</strong>: 39  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202012.RC5
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 364  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202012 &nbsp; </p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Removing references to T24</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - <strong>T24</strong> is renamed to <strong>Transact</strong> across the Temenos Continuous Deployment Portal.
+<br><br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Display the list of components that will be deployed</strong> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - After clicking <strong>Deploy</strong> a notification appears which shows the list of components that will be deployed during the repository deployment. You need to confirm the action to proceed.
+<br>
+</br> </p>
 <h1 id="202011"><strong>202011</strong></h1>
 <p><strong>InfraBuild</strong>: 39  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202011.RC3
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 335  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202011 &nbsp; </p>
