--- a/docfx_project/site/home/techguides/environment-basic-operations.html
+++ b/docfx_project/site/home/techguides/environment-basic-operations.html
@@ -149,7 +149,7 @@
 </li>
 <li><p><strong>Clone environment</strong> - create an identical environment by copying the Environment and configuration repository</p>
 </li>
-<li><p><strong>Upgrade</strong> - the feature is only available for the <strong>Model Bank TSS/ OSS Stack Template</strong>, therefore Extend environments. By clicking on <strong>Upgrade</strong> you can boost the environment to the target template version. </p>
+<li><p><strong>Upgrade</strong> - the feature is only available for the <strong>Model Bank TSS/ OSS Stack Template</strong>, therefore Extend environments. By clicking on <strong>Upgrade</strong> you can boost the environment to the target template version. Watch the tutorial <a href="https://youtu.be/R4J4P-SlJ6Q">here</a>.</p>
 <ul>
 <li><p>Upon clicking on the button a pop-up appears which prompts to select another template from the list of available template:
 <img src="images/environment-upgrade-button.png" alt=""> </p>
@@ -193,8 +193,6 @@
 </li>
 <li><p>The <strong>Upgrade</strong> functionality is not available for environments resulted from factory runs (automated and manual factories).</p>
 </li>
-<li><p><strong>Upgrade</strong> is supported from Python-based templates to Python-based templates only.</p>
-</li>
 <li><p>An environment can only be upgraded with a MB template that is assigned to your organisation. You won&#39;t be able to upgrade a MB-T24-Wildfly-H2-202002 to a MB-T24-Wildfly-H2-202004 if the latter version is not assigned to your organisation. </p>
 </li>
 </ol>
@@ -202,7 +200,7 @@
 </br></p>
 <p> <strong>After the upgrade is completed you can:</strong></p>
 <ol>
-<li><p><strong>Rebuild</strong> the upgraded environment from the  <strong>Actions</strong> button - a pop-up informs that <em>Any changes made to the environment will be lost and the environment will be reset to its original state.</em>. To proceed, tick the checkbok and click <strong>Confirm</strong></p>
+<li><p><strong>Rebuild</strong> the upgraded environment from the  <strong>Actions</strong> button - a pop-up informs that <em>Any changes made to the environment will be lost and the environment will be reset to its original state.</em> To proceed, tick the check box and click <strong>Confirm</strong>:</p>
 <p><img src="images/upgrade-rebuild-env.png" alt=""> </p>
 </li>
 <li><p><strong>Clone</strong> the upgraded environment from the <strong>Actions</strong> button -  a pop-up appears where you need to insert the <strong>Environment Name</strong>, <strong>Environment Description</strong> and <strong>Labels</strong>. The pop-up informs that if L3 packages are manually altered, then they will not be copied and the clone may not work if the T24 environment is upgraded:</p>
