--- a/docfx_project/site/home/toc.html
+++ b/docfx_project/site/home/toc.html
@@ -99,10 +99,10 @@
                           <a href="techguides/environment-basic-operations.html" name="" title="Perform Environment Basic Operations">Perform Environment Basic Operations</a>
                         </li>
                         <li>
-                          <a href="techguides/deploy-an-update-to-an-existing-environment.html" name="" title="Deploy an update to an existing environment">Deploy an update to an existing environment</a>
+                          <a href="techguides/git-folder-standardization.html" name="" title="Git Folder Standardization">Git Folder Standardization</a>
                         </li>
                         <li>
-                          <a href="techguides/add-app-endpoint.html" name="" title="Add new endpoints to an environment">Add new endpoints to an environment</a>
+                          <a href="techguides/deploy-an-update-to-an-existing-environment.html" name="" title="Deploy an update to an existing environment">Deploy an update to an existing environment</a>
                         </li>
                         <li>
                           <a href="techguides/t24-development.html" name="" title="Develop T24 packages, plugins and Code">Develop T24 packages, plugins and Code</a>
@@ -135,7 +135,7 @@
                           <a href="techguides/templates-list.html" name="" title="Available Templates">Available Templates</a>
                         </li>
                         <li>
-                          <a href="http://documentation.temenos.cloud/home/pdf/transact-components.pdf" name="" title="Transact Templates Overview">Transact Templates Overview</a>
+                          <a href="http://documentation.temenos.cloud/home/pdf/transact-components.pdf" name="" title="Transact Template Overview">Transact Template Overview</a>
                         </li>
                         <li>
                           <a href="http://documentation.temenos.cloud/home/techguides/selenium-template.html" name="" title="Selenium Template overview">Selenium Template overview</a>
@@ -214,9 +214,6 @@
                         </li>
                         <li>
                           <a href="manage-factories-video.html" name="" title="Manage Factories">Manage Factories</a>
-                        </li>
-                        <li>
-                          <a href="manage-testcases-video.html" name="" title="Manage Testcases">Manage Testcases</a>
                         </li>
                         <li>
                           <a href="run-factory-video.html" name="" title="Run Factory">Run Factory</a>
