--- a/home/techguides/git-folder-standardization.html
+++ b/home/techguides/git-folder-standardization.html
@@ -477,6 +477,8 @@
 </tr>
 </tbody>
 </table>
+<div class="NOTE"><h5>Note</h5><p>Do not leave multiple versions of the same component type in the GIT folder as this would produce undesired results.</p>
+</div>
 <p><br>
 </br></p>
 <h2 id="4-how-to-deploy-an-update-to-an-environment">4. How to deploy an update to an environment?</h2>
