--- a/home/techguides/upgrade-trials.html
+++ b/home/techguides/upgrade-trials.html
@@ -162,6 +162,7 @@
 </ol>
 <p><br>
 </br></p>
+<p>Tutorial available <a href="https://www.youtube.com/watch?v=R4J4P-SlJ6Q&amp;feature=youtu.be"><strong>here</strong></a>.</p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform basic  environment operations the below permissions need to be enabled for your user:</p>
 <ul>
