--- a/home/techguides/git-folder-standardization.html
+++ b/home/techguides/git-folder-standardization.html
@@ -538,8 +538,11 @@
 <h2 id="5-attachments">5. Attachments</h2>
 <p>You can download the Standalone OSS/ TSS and the db.properties files below:</p>
 <ul>
-<li><p><strong><a href="./../zip/client-standalone-oss">Standalone OSS template</a></strong> </p>
+<li><p><strong><a href="./../zip/client-standalone-OSS-1">Standalone OSS file applicable for templates that were released before 202008</a></strong> </p>
 </li>
+<li><p><strong><a href="./../zip/client-standalone-OSS-2">Standalone OSS file applicable for templates that were released after 202008 (including the 202008)</a></strong> </p>
+</li>
+<li></li>
 <li><p><strong><a href="./../zip/client-standalone-TSS">Standalone TSS template</a></strong> </p>
 </li>
 <li><p><strong><a href="../zip/db.properties">db.properties file</a></strong> </p>
