--- a/home/techguides/save-as-new-template.html
+++ b/home/techguides/save-as-new-template.html
@@ -81,10 +81,10 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="save-as-new-template">Save as New Template</h1>
 
-<p>You can easily customize your templates via the <strong>Save as New Template</strong> feature. This self-service functionality enables you to create custom templates from a model bank template in just a few click. During this operation component binaries, deployment mechanisms or infrastructure can be changed and new components can be added.</p>
+<p>You can easily customize your templates via the <strong>Save as New Template</strong> feature. This self-service functionality enables you to create custom templates from a model bank template in just a few clicks. During this operation component binaries, deployment mechanisms or infrastructure can be changed and new components can be added.</p>
 <p>By clicking on the <strong>Save as New Template</strong>  all the components are copied from the environment GIT Repository to Artifactory and saves them as a new template. </p>
 <p>To customize your template, you need to have at least the mandatory components uploaded and deployed successfully. This is to ensure that there will be no issues in any environment created from the new template (read <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html">here</a> how you can deploy a component).</p>
-<h2 id="how-to-create-a-new-template"><strong>How to create a new template</strong></h2>
+<h2 id="create-a-new-template">Create a new template</h2>
 <p>After deploying the components:</p>
 <ol>
 <li><p>Click on the <strong>Environment</strong> tab from the left-side menu.</p>
@@ -104,7 +104,7 @@
 </br></p>
 </li>
 </ol>
-<h2 id="post-template-creation-actions"><strong>Post template creation actions</strong></h2>
+<h2 id="post-template-creation-actions">Post template creation actions</h2>
 <p>After the template is successfully created you can:</p>
 <ol>
 <li><p>Provision an environment with the newly created template (learn <a href="http://documentation.temenos.cloud/home/manage-environments.html">here</a> how to create an environment). </p>
@@ -112,7 +112,10 @@
 <li><p>Run a factory using the template (learn <a href="http://documentation.temenos.cloud/home/techguides/run-factory.html">here</a> how to run factories).</p>
 </li>
 </ol>
+<h2 id="tutorial">Tutorial</h2>
 <p>Watch the video tutorial <a href="https://www.youtube.com/watch?v=4G7PH5tsej0&amp;feature=youtu.be"><strong>here</strong></a>.</p>
+<p><br>
+</br></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform basic  environment operations the below permissions need to be enabled for your user:</p>
 <ul>
