--- a/home/techguides/upgrade-trials.html
+++ b/home/techguides/upgrade-trials.html
@@ -100,10 +100,9 @@
 </br></p>
 <h1 id="how-to-upgrade-an-environment">How to upgrade an environment</h1>
 <ol>
-<li>Upon clicking on the button a pop-up appears which prompts to select another template from the list of available template:</li>
-</ol>
+<li><p>Upon clicking on the button a pop-up appears which prompts to select another template from the list of available template:</p>
 <p><img src="images/environment-upgrade-button.png" alt=""> </p>
-<ol>
+</li>
 <li><p>Click on <strong>Upgrade</strong> to proceed.</p>
 </li>
 <li><p>The environment status changes to <strong>Upgrading</strong>:</p>
@@ -111,12 +110,12 @@
 <li><p>In the <strong>Events</strong> tab you can see the log which refers to the upgrade from the Base template to Target template.</p>
 </li>
 <li><p>Once the action is complete, in the <strong>Template Info</strong> bar you can see that the template name changed to the target release (in this example 202003).</p>
+<p><img src="images/upgraded-environment.png" alt=""> </p>
 </li>
 </ol>
-<p><img src="images/upgraded-environment.png" alt=""> </p>
 <p><br>
 </br></p>
-<p>  <strong>Upgrade Validations:</strong></p>
+<h2 id="upgrade-validations">Upgrade Validations</h2>
 <ol>
 <li><p>The <strong>Upgrade</strong> button is enabled at the organisation level.</p>
 </li>
@@ -147,22 +146,31 @@
 </ol>
 <p><br>
 </br></p>
-<p> <strong>After the upgrade is completed you can:</strong></p>
+<h2 id="post-upgrade-actions">Post Upgrade Actions</h2>
 <ol>
-<li><p><strong>Rebuild</strong> the upgraded environment from the  <strong>Actions</strong> button - a pop-up informs that <em>Any changes made to the environment will be lost and the environment will be reset to its original state.</em> To proceed, tick the check box and click <strong>Confirm</strong>:</p>
-<p><img src="images/upgrade-rebuild-env.png" alt=""> </p>
+<li><p>Install EB products.</p>
 </li>
-<li><p><strong>Clone</strong> the upgraded environment from the <strong>Actions</strong> button -  a pop-up appears where you need to insert the <strong>Environment Name</strong>, <strong>Environment Description</strong> and <strong>Labels</strong>. The pop-up informs that if L3 packages are manually altered, then they will not be copied and the clone may not work if the T24 environment is upgraded:</p>
-<p><img src="images/upgrade-rebuild-env.png" alt=""> </p>
+<li><p>Install Transact/ T24 Updates.</p>
 </li>
-<li><p>Use the self-service <strong>Save as New Template</strong> feature (read more here)</p>
+<li><p>Integrate L3 deployment via GIT​.</p>
 </li>
-<li><p>Use the environment to perform all the environment actions (authorize the exception, deploy, install T24 products updates/ L3/ APIs, COB  etc.).</p>
+<li><p>Install new modules in Jboss​.</p>
+</li>
+<li><p>Add new queues and data sources in the standalone.xml file​.</p>
+</li>
+<li><p>Install custom APIs and different versions of core war files​.</p>
+</li>
+<li><p>Deploy helptext files​.</p>
+</li>
+<li><p>Save as New Template (learn <a href="http://documentation.temenos.cloud/home/techguides/save-as-new-template.html?q=save"><strong>here</strong></a> how to create new templates).</p>
 </li>
 </ol>
 <p><br>
 </br></p>
-<p>Tutorial available <a href="https://www.youtube.com/watch?v=R4J4P-SlJ6Q&amp;feature=youtu.be"><strong>here</strong></a>.</p>
+<h2 id="tutorial">Tutorial</h2>
+<p>Tutorial available <a href="https://www.youtube.com/watch?v=R4J4P-SlJ6Q&amp;feature=youtu.be"><strong>here</strong></a>.
+<br>
+</br></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform basic  environment operations the below permissions need to be enabled for your user:</p>
 <ul>
