--- a/home/techguides/git-folder-standardization.html
+++ b/home/techguides/git-folder-standardization.html
@@ -523,7 +523,7 @@
 <p><strong>Other alterations added to the XML file will result in a failed deployment.</strong></p>
 </li>
 </ul>
-<h3 id="442-the-dbproperties-file---only-applicatble-for-oss-templates">4.4.2 The db.properties file - only applicatble for OSS templates!</h3>
+<h3 id="442-the-dbproperties-file---only-applicable-for-wildfly-h2-templates">4.4.2 The db.properties file - only applicable for Wildfly/ H2 templates</h3>
 <p>You can place the TAFJDB.zip file in the model-bank-database-h2 folder. The db.properties file should be added to the corresponding H2 .zip files in the artifactory and the H2 machines must have a copy of this file.</p>
 <div class="NOTE"><h5>Note</h5><p>If the Golden Copy is provided by you make sure to have the db.properties file under the model-bank-database-h2. If this is not present, the environment will be created using the default modelbank credentials.</p>
 <p>It is mandatory to have the db.properties file included along with your H2 DB .zip file, otherwise the environment will be created using the default modelbank credentials.</p>
